--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "expand",
-  "version": "0.1.0",
+  "name": "675jx",
+  "version": "1.5.2",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
