--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.2",
   "private": true,
   "dependencies": {
+    "dplayer": "^1.25.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
